resolves #380 add text-<alignment> styles

--- a/templates/asciidoctor-compatibility.css
+++ b/templates/asciidoctor-compatibility.css
@@ -159,3 +159,31 @@ td.hdlist1{font-weight:bold;padding-bottom:1.25em}
 .columns .slide-content > .column.has-text-right {
   text-align: right;
 }
+
+.columns .slide-content > .column.has-text-left {
+  text-align: left;
+}
+
+.columns .slide-content > .column.has-text-justified {
+  text-align: justify;
+}
+
+.columns .slide-content > .column.has-text-right {
+  text-align: right;
+}
+
+.text-left {
+  text-align: left !important
+}
+
+.text-right {
+  text-align: right !important
+}
+
+.text-center {
+  text-align: center !important
+}
+
+.text-justify {
+  text-align: justify !important
+}
